Correct styling overlap between home and individual resource pages

--- a/src/components/SingleResourcePage/SingleResourcePage.css
+++ b/src/components/SingleResourcePage/SingleResourcePage.css
@@ -59,21 +59,21 @@ html {
   animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards,
     borderRadius 0.2s 2.3s linear forwards;
 }
-*/ h1,
+.resource-page h1,
 h2 {
   font-weight: 500;
   margin: 0px 0px 5px 0px;
 }
 
-h1 {
+.resource-page h1 {
   font-size: 24px;
 }
 
-h2 {
+.resource-page h2 {
   font-size: 16px;
 }
 
-p {
+.resource-page p {
   padding-top: 1rem;
   margin-left: 2rem;
   font-size: 20px;
